# eta3-spline

./: Cargo.toml  LICENSE  README.md
eta3-spline/: .gitignore  Cargo.toml
eta3-spline/src/: lib.rs  polynomial.rs
src/: lib.rs  polynomial.rs
visualizer/: .gitignore  Cargo.toml  autoreplot.gp
visualizer/src/: main.rs
