[package]
name = "eta3-visualizer"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]

[dependencies]
eta3-spline = {path = "../eta3-spline"}
gtk = "0.4.1"
relm = "0.14.6"
relm-derive = "0.14.6"
relm-attributes = "0.14.6"
csv = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
atomicwrites = "0.2.2"
libc = "0.2.43"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
